Another authentication for player started
