# boardgametracker/doc/openapi.yml
@@ -8,7 +8,11 @@ servers:
   - url: http://127.0.0.1:5000
 components:
   securitySchemes:
-    ApiKeyAuth:
+    AdminKey:
+      type: apiKey
+      in: header
+      name: BGT-Api-Key
+    PlayerKey:
       type: apiKey
       in: header
       name: BGT-Api-Key
